--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,24 @@ body {
     font-family: "Merriweather", serif;
   }
 
+
+p{
+
+  font-size: 13px;
+  font-weight: 300;
+  font-family: "Merriweather Sans"
+
+}
+
+li{
+
+  font-size: 13px;
+  font-weight: 300;
+  font-family: "Merriweather Sans"
+
+}
+
+
 h1 {
   color: #e6edf3;
   font-size: 16px ;
@@ -84,17 +102,16 @@ hr {
 
 .bottom-container {
     background-color: #010409;
-    padding: 50px 0 20px;
+    margin: 0 ;
+
+
+    padding: 20px;
   }
 
-.hname {
 
+.hname {
   font-size: 31px;
   font-weight: 600;
-
-
-
-
 }
 
 
@@ -112,6 +129,7 @@ hr {
       grid-gap: 20px;
       position: relative;
       width: auto;
+      box-sizing: border-box;
       flex-direction: row;
       /* margin-bottom: 4rem;
       margin-top: 4rem;
@@ -158,10 +176,14 @@ hr {
     border-radius: 4px;
     font-size: 15px;
     cursor: pointer;
+    text-decoration: none;
+    opacity:0.75;
   }
   
   .solid-dark-button:hover {
     background-color: #2c2d2e;
+    opacity:1;
+    text-decoration: none;
 
   }
 
@@ -186,8 +208,8 @@ hr {
 
   .outlined-dark-button {
     background-color: transparent;
-    color: #ffffff;
-    border: 0.2px solid #ffffff;
+    color: #c1c1c1;
+    border: 0.2px solid #c1c1c1;
     padding: 10px 20px;
     border-radius: 4px;
     font-size: 16px;
@@ -197,6 +219,9 @@ hr {
   
   .outlined-dark-button:hover {
     background-color: #333;
+    text-decoration: none;
+    color: #ffffff;
+    border: 0.2px solid #ffffff;
   }
 
   .introbuttons{
@@ -205,3 +230,117 @@ hr {
     gap: 20px;
 
   }
+
+  .footer-dark {
+    padding:50px 0;
+    color:#f0f9ff;
+    background-color:#010409;
+  }
+  
+  .footer-dark h3 {
+    margin-top:0;
+    margin-bottom:12px;
+    font-weight:bold;
+    font-size:16px;
+  }
+  
+  .footer-dark ul {
+    padding:0;
+    list-style:none;
+    line-height:1.6;
+    font-size:14px;
+    margin-bottom:0;
+  }
+  
+  .footer-dark ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.6;
+  }
+  
+  .footer-dark ul a:hover {
+    opacity:0.8;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item:not(.social) {
+      text-align:center;
+      padding-bottom:20px;
+    }
+  }
+  
+  .footer-dark .item.text {
+    margin-bottom:36px;
+  }
+  
+  @media (max-width:767px) {
+    .footer-dark .item.text {
+      margin-bottom:0;
+    }
+  }
+  
+  .footer-dark .item.text p {
+    opacity:0.6;
+    margin-bottom:0;
+  }
+  
+  .footer-dark .item.social {
+    text-align:center;
+  }
+  
+  @media (max-width:991px) {
+    .footer-dark .item.social {
+      text-align:center;
+      margin-top:20px;
+    }
+  }
+  
+  .footer-dark .item.social > a {
+    font-size:20px;
+    width:50px;
+    height:36px;
+    line-height:36px;
+    display:inline-block;
+    text-align:center;
+    border-radius: 4px ;
+    box-shadow:0 0 0 1px rgba(255,255,255,0.4);
+    margin:0 8px;
+    color:#fff;
+    opacity:0.75;
+  }
+  
+  /* .footer-dark .item.social > a:hover {
+    opacity: 1 ;
+    background-color: #2c2d2e;
+  } */
+  
+  .footer-dark .copyright {
+    text-align:center;
+    padding-top:24px;
+    opacity:0.3;
+    font-size:13px;
+    margin-bottom:0;
+  }
+  
+
+  .social_links {
+    color: #ffffff;
+    display: flex;
+    width: 100;
+    gap: 20px;
+    flex-wrap: wrap;
+    flex-direction: row;
+    font-size: 13px;
+    padding: 10px 10px;
+}
+
+.social_links a {
+  border: 1px solid #6d6d6d;
+  border-radius: 6px;
+  color: #ffffff;
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  font-size: 13px;
+  padding: 10px 10px;
+}
