--- a/styles.css
+++ b/styles.css
@@ -327,6 +327,7 @@ hr {
     color: #ffffff;
     display: flex;
     width: 100;
+    text-align: center;
     gap: 20px;
     flex-wrap: wrap;
     flex-direction: row;
@@ -338,6 +339,7 @@ hr {
   border: 1px solid #6d6d6d;
   border-radius: 6px;
   color: #ffffff;
+  text-decoration: none;
   display: flex;
   gap: 10px;
   flex-direction: row;
