--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,30 @@
 body {
-  background: rgb(4,4,14);
-  background: linear-gradient(128deg, rgba(4,4,14,1) 0%, rgba(20,3,33,1) 0%, rgba(2,2,32,1) 100%);
+  /* background: rgb(4,4,14); */
+  /* background: linear-gradient(128deg, rgba(4,4,14,1) 0%, rgba(20,3,33,1) 0%, rgba(2,2,32,1) 100%); */
+
+  /* background: #0F2027;  
+  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);  */
+  
+
+  background: #485563;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+
   font-family: "Merriweather", serif;
 }
+
+
+nav{
+  
+  background: #485563;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+
+}
+
 
 p {
   color: #ffffff;
@@ -40,6 +62,10 @@ hr {
   margin: 0;
 }
 
+
+
+
+
 .solid-dark-button {
   background-color:transparent;
   color: #fff;
@@ -50,12 +76,14 @@ hr {
   cursor: pointer;
   text-decoration: none;
   opacity: 0.75;
+  
 }
 
 .solid-dark-button:hover {
-  background-color: rgb(81, 81, 81);
+  background-color: rgb(37, 37, 37);
   opacity: 1;
   text-decoration: none;
+  
 }
 
 .circular--landscape {
@@ -163,6 +191,7 @@ hr {
   flex-direction: column;
   font-size: 13px;
   padding: 10px 10px 20px;
+  
 }
 
 .social_links a {
